--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
         <img class="pokeball-image" src="images/pokeball.png" alt="" />
       </button>
     </form>
-    <div class="poke-container">
-      <div class="poke-box">
-        <img
-          src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png"
-          alt=""
-        />
-        <h4 class="poke-name">Squirtle</h4>
-        <p class="poke-id">#007</p>
-        <p class="poke-weight">31 Kg</p>
-        <p class="poke-type">Type: Water</p>
-      </div>
-    </div>
+    <div class="poke-container"></div>
   </body>
 </html>
