--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Custom Pokedex</h1>
     <form class="poke-search">
       <input type="text" name="poke-input" id="poke-input" />
-      <button class="btn-search">
+      <button class="btn-search" type="button">
         <img class="pokeball-image" src="images/pokeball.png" alt="" />
       </button>
     </form>
